fix: icon position to be top on mobile

--- a/src/components/Banner/fixed-dbot-banner.scss
+++ b/src/components/Banner/fixed-dbot-banner.scss
@@ -21,6 +21,7 @@
         @include mobile {
             padding: 16px;
             font-size: var(--font-size-s);
+            align-items: flex-start;
         }
     }
 
